<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lgtbiq_informacion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView1"
                android:layout_width="304dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/titulo"
                android:textColor="@color/btncolor"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.043" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="331dp"
                android:layout_height="190dp"
                android:layout_gravity="center"
                android:src="@drawable/ilustracion"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.189" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="329dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="44dp"
                android:text="@string/titulo1"
                android:layout_marginLeft="5pt"
                android:layout_marginRight="5pt"
                android:textColor="@color/black"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.535" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="293dp"
                android:layout_height="wrap_content"
                android:text="@string/titulo2"
                android:textColor="@color/btncolor"
                android:layout_marginLeft="5pt"
                android:layout_marginRight="5pt"
                android:textSize="19sp"
                android:paddingBottom="10pt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.322"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.856" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="331dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="956dp"
                android:layout_marginLeft="5pt"
                android:layout_marginRight="5pt"
                android:layout_marginBottom="40pt"
                android:text="@string/hiperlink1"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.475"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Barra_Navegacion">


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-1dp"
            android:background="@drawable/ssssss"
            card_view:itemIconTint="@drawable/slllll"
            card_view:itemTextColor="@drawable/slllll"
            card_view:menu="@menu/menu_bar" />


    </RelativeLayout>
</RelativeLayout>
